7114303: G1: assert(_g1->mark_in_progress()) failed: shouldn't be here otherwise

Race between the VM thread reading G1CollectedHeap::_mark_in_progress and it being set by the concurrent mark thread when concurrent marking is aborted by a full GC. Have the concurrent mark thread join the SuspendibleThreadSet before changing the marking state.

Reviewed-by: tonyp, brutisso